src/test/deca/context/valid/SansObjet/DeclVar-booleanBool.deca
// Description:
//    Declaration of a boolean variable with initialization.
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x = false ;
}
